feat(food-logger): add interactive mode support Introduced a new interactive mode to enhance user interaction within the food-logger application. Updated douglas.py to handle interactive sessions.

--- a/apps/food-logger.yaml
+++ b/apps/food-logger.yaml
@@ -1,6 +1,7 @@
 # apps/food-logger.yaml
 name: "Food Logger"
 description: "Accepts text descriptions of meals, stores them in a database, and uses an LLM to generate a CSV report."
+interactive: true
 
 database:
   models:
