chore(config): update site description in config file Simplified the site description to match the updated branding guidelines.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Douglas
-description: Chainable AI App Runner & Builder. Don't Panic - Your digital towel is ready.
+description: Don't Panic
 
 # Jekyll theme - perfect for your retro terminal aesthetic
 theme: jekyll-theme-hacker
