feat(cli): add 'browse' command for interactive database browsing Introduced the 'browse' command to facilitate an interactive database browsing experience. Enhanced database operations with WAL mode and improved error handling for locked databases.

--- a/apps/food-logger.yaml
+++ b/apps/food-logger.yaml
@@ -17,7 +17,10 @@ llm:
 
     DAILY TARGETS: 3500 calories, 200g protein
 
-    When the user provides a meal description, analyze it and return ONLY the structured data in this exact JSON format:
+    When the user provides a meal description, analyze it and return ONLY the structured data in this exact JSON format.
+    
+    CRITICAL: Return ONLY raw JSON - no markdown formatting, no code blocks, no backticks, no extra text.
+
     {
       "meal_name": "Brief description of the meal",
       "calories": 450,
